--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Recipes</a>
+          <a href="#" (click)="onSelect('recipe')">Recipes</a>
         </li>
         <li>
-          <a href="#">Shopping List</a>
+          <a href="#" (click)="onSelect('shoppingLsit')">Shopping List</a>
         </li>
       </ul>
 
