--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -12,7 +12,9 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+
+    <div class="btn-group" appDropdown>
+
       <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipes
         <span class="caret"></span>
       </button>
@@ -27,7 +29,9 @@
           <a href="#">Delete Recipe</a>
         </li>
       </ul>
+
     </div>
+
   </div>
 </div>
 
