--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,7 +20,7 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a href="#">Add to Shopping List</a>
+          <a style="cursor: pointer" (click)="onAddToShoppingList()">Add to Shopping List</a>
         </li>
         <li>
           <a href="#">Edit Recipe</a>
@@ -43,6 +43,10 @@
 
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
