--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#" (click)="onSelect('recipe')">Recipes</a>
+          <a routerLink="/recipes">Recipes</a>
         </li>
         <li>
-          <a href="#" (click)="onSelect('shoppingLsit')">Shopping List</a>
+          <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
               <a href="#">Save Data</a>
