--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,10 +23,10 @@
           <a style="cursor: pointer" (click)="onAddToShoppingList()">Add to Shopping List</a>
         </li>
         <li>
-          <a href="#">Edit Recipe</a>
+          <a style="cursor: pointer">Edit Recipe</a>
         </li>
         <li>
-          <a href="#">Delete Recipe</a>
+          <a style="cursor: pointer">Delete Recipe</a>
         </li>
       </ul>
 
