--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,8 +19,8 @@
           <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
-              <a href="#">Save Data</a>
-              <a href="#">Fetch Data</a>
+              <a style="cursor: pointer">Save Data</a>
+              <a style="cursor: pointer">Fetch Data</a>
             </li>
           </ul>
         </li>
