--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,11 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li>
-          <a routerLinkActive="active" routerLink="/recipes">Recipes</a>
+        <li routerLinkActive="active">
+          <a routerLink="/recipes">Recipes</a>
         </li>
-        <li>
-          <a routerLinkActive="active" routerLink="/shopping-list">Shopping List</a>
+        <li routerLinkActive="active">
+          <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
 
