--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,7 @@
           <a style="cursor: pointer" (click)="onAddToShoppingList()">Add to Shopping List</a>
         </li>
         <li>
-          <a style="cursor: pointer">Edit Recipe</a>
+          <a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
         </li>
         <li>
           <a style="cursor: pointer">Delete Recipe</a>
